# firmatlas

./: .gitignore  README.md  pyproject.toml
docs/: mvp-acceptance.md  review-tplink-cn-classification.md
src/firmatlas/: __init__.py
src/firmatlas/adapters/: events.py
src/firmatlas/app/: config.py  crawl.py  download.py  ports.py  queries.py  recovery.py  registry.py
src/firmatlas/cli/: main.py
src/firmatlas/domain/: candidates.py  errors.py  ids.py  model.py  timeutil.py
src/firmatlas/infra/: database.py  (+7 more)
tests/: conftest.py  test_catalog_query.py  test_cli_config.py  test_cli_crawl.py  test_cli_download.py  test_config.py  test_crawl_usecase.py  test_dahua_global_adapter.py  test_dlink_us_adapter.py  test_dlink_us_classification.py  test_dlink_us_directory_parser.py  test_download_usecase.py  test_downloader.py  test_draytek_global_adapter.py  test_draytek_global_classification.py  test_draytek_global_directory_parser.py  test_e2e_dlink_us.py  test_e2e_hikvision_global.py  test_e2e_omada_global.py  test_e2e_tplink_cn.py  test_e2e_tplink_us.py  test_e2e_zyxel_global.py  test_hikvision_global_adapter.py  test_hikvision_global_firmware_parser.py  test_http_client.py  test_ids.py  test_init.py  test_miwifi_cn_adapter.py  test_omada_global_adapter.py  test_omada_global_classification.py  test_omada_global_response_parser.py  test_process_lock.py  test_recovery.py  test_repository_catalog.py  test_repository_catalog_lifecycle.py  test_repository_downloads.py  test_repository_runs.py  test_repository_sources.py  test_ruijie_cn_adapter.py  test_ruijie_cn_auth.py  (+15 more)
(+103 files in other folders)
